--- a/AngularProject/AngularProject/ClientApp/src/app/app.component.html
+++ b/AngularProject/AngularProject/ClientApp/src/app/app.component.html
@@ -1,9 +1,18 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-    <h1>
-        Welcome to Angular App Development!
-    </h1>
-</div>
+<nav class="navbar navbar-expand navbar-light bg-light">
+    <ul class="nav navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/']">Store</a>
+        </li>
+    </ul>
+    <ul class="nav navbar-nav flex-row-reverse">
+        <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/login']">Login</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/signup']">Sign Up</a>
+        </li>
+    </ul>
+</nav>
 <div class="container">
     <router-outlet></router-outlet>
 </div>
