--- a/AngularProject/AngularProject/ClientApp/src/app/app.component.html
+++ b/AngularProject/AngularProject/ClientApp/src/app/app.component.html
@@ -4,7 +4,7 @@
             <a class="nav-link" [routerLink]="['/']">Store</a>
         </li>
     </ul>
-    <ul class="nav navbar-nav flex-row-reverse">
+    <ul class="nav navbar-nav">
         <li class="nav-item">
             <a class="nav-link" [routerLink]="['/login']">Login</a>
         </li>
