user module added as a lazily loaded module

--- a/AngularProject/AngularProject/ClientApp/src/app/app.component.html
+++ b/AngularProject/AngularProject/ClientApp/src/app/app.component.html
@@ -11,6 +11,12 @@
         <li class="nav-item">
             <a class="nav-link" [routerLink]="['/signup']">Sign Up</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/admin']">Admin</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/user']">User</a>
+        </li>
     </ul>
 </nav>
 <div class="container">
