--- a/AngularProject/AngularProject/ClientApp/src/app/login/login.component.html
+++ b/AngularProject/AngularProject/ClientApp/src/app/login/login.component.html
@@ -1,1 +1,14 @@
-<p>login works!</p>
+<h2>Login</h2>
+<hr>
+
+<form #form="ngForm" (ngSubmit)="SaveData(form)">
+    <div class="form-group">
+        <label for="username">Username</label>
+        <input type="text" class="form-control" id="username" name="username" #username="ngModel" [(ngModel)]="login.username" />
+    </div>
+    <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" class="form-control" id="password" name="password" #password="ngModel" [(ngModel)]="login.password" />
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+</form>
