--- a/AngularProject/AngularProject/ClientApp/src/app/Areas/admin/shared/layout/adminlayout.component.html
+++ b/AngularProject/AngularProject/ClientApp/src/app/Areas/admin/shared/layout/adminlayout.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand navbar-light bg-light">
     <ul class="nav navbar-nav">
         <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/']">Dashboard</a>
+            <a class="nav-link" [routerLink]="['/admin']">Dashboard</a>
         </li>
     </ul>
     <ul class="nav navbar-nav">
