--- a/AngularProject/AngularProject/ClientApp/src/app/Areas/admin/shared/layout/adminlayout.component.html
+++ b/AngularProject/AngularProject/ClientApp/src/app/Areas/admin/shared/layout/adminlayout.component.html
@@ -6,6 +6,9 @@
     </ul>
     <ul class="nav navbar-nav">
         <li class="nav-item">
+            Welcome {{user.Name}}!
+        </li>
+        <li class="nav-item">
             <a class="nav-link" [routerLink]="['/logout']">Logout</a>
         </li>
     </ul>
