--- a/AngularProject/AngularProject/ClientApp/src/app/Areas/admin/shared/layout/adminlayout.component.html
+++ b/AngularProject/AngularProject/ClientApp/src/app/Areas/admin/shared/layout/adminlayout.component.html
@@ -5,7 +5,7 @@
         </li>
     </ul>
     <ul class="nav navbar-nav">
-        <li class="nav-item">
+        <li class="nav-item" style="padding-top: 8px;">
             Welcome {{user.Name}}!
         </li>
         <li class="nav-item">
