--- a/AngularProject/AngularProject/ClientApp/src/app/Areas/user/shared/layout/userlayout.component.html
+++ b/AngularProject/AngularProject/ClientApp/src/app/Areas/user/shared/layout/userlayout.component.html
@@ -5,6 +5,9 @@
         </li>
     </ul>
     <ul class="nav navbar-nav">
+        <li class="nav-item" style="padding-top: 8px;">
+            Welcome {{user.Name}}!
+        </li>
         <li class="nav-item">
             <a class="nav-link" [routerLink]="['/logout']">Logout</a>
         </li>
