--- a/AngularProject/AngularProject/ClientApp/src/app/Areas/admin/shared/layout/adminlayout.component.html
+++ b/AngularProject/AngularProject/ClientApp/src/app/Areas/admin/shared/layout/adminlayout.component.html
@@ -9,7 +9,7 @@
             Welcome {{user.Name}}!
         </li>
         <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/logout']">Logout</a>
+            <a class="nav-link" href="javascript:void(0)" (click)="logOut()">Logout</a>
         </li>
     </ul>
 </nav>
