--- a/AngularProject/AngularProject/ClientApp/src/app/Areas/admin/products/products.component.html
+++ b/AngularProject/AngularProject/ClientApp/src/app/Areas/admin/products/products.component.html
@@ -1,1 +1,20 @@
-<p>products works!</p>
+<h2>Products</h2>
+<hr>
+<table class="table">
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Image</th>
+            <th>Description</th>
+            <th>Contact</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let item of products">
+            <td>{{item.Name}}</td>
+            <td><img [src]="item.ImagePath" height="200" /></td>
+            <td>{{item.Description}}</td>
+            <td>{{item.UnitPrice}}</td>
+        </tr>
+    </tbody>
+</table>
