--- a/AngularProject/AngularProject/ClientApp/src/app/Areas/admin/shared/layout/adminlayout.component.html
+++ b/AngularProject/AngularProject/ClientApp/src/app/Areas/admin/shared/layout/adminlayout.component.html
@@ -1,18 +1,24 @@
 <nav class="navbar navbar-expand navbar-light bg-light">
     <ul class="nav navbar-nav">
-        <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/admin']">Dashboard</a>
+        <li class="nav-ite">
+            <a class="nav-link" [routerLink]="['/admin']">Dashbord</a>
+        </li>
+        <li class="nav-ite">
+            <a class="nav-link" [routerLink]="['product']">Product</a>
+        </li>
+        <li class="nav-ite">
+            <a class="nav-link" [routerLink]="['products']">Products</a>
         </li>
     </ul>
-    <ul class="nav navbar-nav">
+    <ul class="nav navbar-nav ml-auto">
         <li class="nav-item" style="padding-top: 8px;">
-            Welcome {{user.Name}}!
+            Welcome : {{user.Name}}
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="javascript:void(0)" (click)="logOut()">Logout</a>
+            <a class="nav-link" href="javascript:void(0);" (click)="logOut()">Logout</a>
         </li>
     </ul>
 </nav>
-<div>
+<div class="container">
     <router-outlet></router-outlet>
 </div>
