changes in user layout

--- a/AngularProject/AngularProject/ClientApp/src/app/Areas/user/shared/layout/userlayout.component.html
+++ b/AngularProject/AngularProject/ClientApp/src/app/Areas/user/shared/layout/userlayout.component.html
@@ -4,7 +4,7 @@
             <a class="nav-link" [routerLink]="['/user']">Dashboard</a>
         </li>
     </ul>
-    <ul class="nav navbar-nav">
+    <ul class="nav navbar-nav ml-auto">
         <li class="nav-item" style="padding-top: 8px;">
             Welcome {{user.Name}}!
         </li>
