--- a/AngularProject/AngularProject/ClientApp/src/app/shared/layout/layout.component.html
+++ b/AngularProject/AngularProject/ClientApp/src/app/shared/layout/layout.component.html
@@ -4,6 +4,14 @@
             <a class="nav-link" [routerLink]="['/']">Store</a>
         </li>
     </ul>
+    <ul class="nav navbar-nav ml-auto" *ngIf="user!=undefined">
+        <li class="nav-item" style="padding-top: 8px;">
+            Welcome : {{user.Name}}
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="javascript:void(0);" (click)="logOut()">Logout</a>
+        </li>
+    </ul>
     <ul class="nav navbar-nav">
         <li class="nav-item">
             <a class="nav-link" [routerLink]="['/login']">Login</a>
@@ -20,6 +28,6 @@
     </ul>
 </nav>
 
-<div>
+<div class="container">
     <router-outlet></router-outlet>
 </div>
