--- a/AngularProject/AngularProject/ClientApp/src/app/shared/layout/layout.component.html
+++ b/AngularProject/AngularProject/ClientApp/src/app/shared/layout/layout.component.html
@@ -11,8 +11,9 @@
         <li class="nav-item">
             <a class="nav-link" href="javascript:void(0);" (click)="logOut()">Logout</a>
         </li>
-    </ul>
-    <ul class="nav navbar-nav">
+        <li *ngIf="cart.TotalItems">
+            <a class="nav-link" href="javascript:void(0);" [routerLink]="['/cart']">{{cart.TotalItems}} Items, {{cart.Total | currency:'INR'}}</a>
+        </li>
         <li class="nav-item">
             <a class="nav-link" [routerLink]="['/login']">Login</a>
         </li>
