--- a/AngularProject/AngularProject/ClientApp/src/app/shared/layout/layout.component.html
+++ b/AngularProject/AngularProject/ClientApp/src/app/shared/layout/layout.component.html
@@ -4,20 +4,20 @@
             <a class="nav-link" [routerLink]="['/']">Store</a>
         </li>
     </ul>
-    <ul class="nav navbar-nav ml-auto" *ngIf="user!=undefined">
-        <li class="nav-item" style="padding-top: 8px;">
+    <ul class="nav navbar-nav ml-auto">
+        <li class="nav-item" style="padding-top: 8px;" ngIf="user.UserId>0">
             Welcome : {{user.Name}}
         </li>
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="user.UserId>0">
             <a class="nav-link" href="javascript:void(0);" (click)="logOut()">Logout</a>
         </li>
         <li *ngIf="cart.TotalItems">
             <a class="nav-link" href="javascript:void(0);" [routerLink]="['/cart']">{{cart.TotalItems}} Items, {{cart.Total | currency: 'INR'}}</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="user.UserId==undefined">
             <a class="nav-link" [routerLink]="['/login']">Login</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="user.UserId==undefined">
             <a class="nav-link" [routerLink]="['/signup']">Sign Up</a>
         </li>
         <li class="nav-item">
